[tool.poetry]
name = "first-flet-app"
version = "0.1.0"
description = ""
authors = ["sumx21t <otoro180yen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetory.scripts]
run-flet = "flet.__main__:main"